--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,4 +4,8 @@ nav:
     - Home: index.md
     - 2asir3:
         - 'ej1-playbook-sencillo': '2021-09-22-ej1-playbook-sencillo.md'
+        - 'ej1-pull-request': '2021-09-22-ej1-pull-request.md'
+        - 'ej2-router-nat-vagrant': '2021-10-1-ej2-router-nat-vagrant.md'
+        - 'ej3-config-escenario-router-nat': '2021-10-3-ej3-config-escenario-router-nat.md'
+        - 'app-web-estatica': '2021-10-5-implantacion-despliegue-aplicacion-web-estatica.md'
     - About: about.md
