--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,15 @@
 site_name: conocimiento-en-bits
 theme:
   name: 'material'
-  palette:
-    primary: 'blue grey'
-    accent: 'deep orange'
+  palette: 
+    - scheme: default
+      toggle:
+        icon: material/toggle-switch-off-outline
+        name: Switch to dark mode
+    - scheme: slate 
+      toggle:
+        icon: material/toggle-switch
+        name: Switch to light mode
 nav:
     - Home: index.md
     - 2asir3:
