--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,3 +24,5 @@ nav:
         - 'ej3-config-escenario-router-nat': '2021-10-3-ej3-config-escenario-router-nat.md'
         - 'app-web-estatica': '2021-10-5-implantacion-despliegue-aplicacion-web-estatica.md'
     - About: about.md
+extra:
+  disqus: conocimiento-en-bits-neocities-org
