--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,7 @@ nav:
         - 'ej3-config-escenario-router-nat': '2021-10-3-ej3-config-escenario-router-nat.md'
         - 'app-web-estatica': '2021-10-5-implantacion-despliegue-aplicacion-web-estatica.md'
         - 'ej2-pr-pag-compañero': '2021-10-14-ej2-pr-pag-compañero.md' 
+        - 'ej3-config-escenario-router-nat': '2021-10-3-ej3-config-escenario-router-nat.md'
     - About: about.md
 extra:
   disqus: conocimiento-en-bits-neocities-org
