--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,3 +27,4 @@ nav:
         - 'Protección contra amenazas': 'proteccion-amenazas.md'
     - Plan de contingencias: plan-contingencias.md
     - Controles periódicos: controles-periodicos.md
+    - Bibliografía: bibliografia.md
