--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,5 +62,5 @@ plugins:
   - glightbox
   - search
   - mkdocs-asciinema
-repo_url: https://github.com/adriasir123/p1-bd-servidores-clientes
-repo_name: p1-bd-servidores-clientes
+repo_url: https://github.com/adriasir123/grupalesbdc
+repo_name: Repositorio
