--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,7 +25,7 @@ theme:
         icon: material/brightness-7
         name: Cambiar a tema normal
 nav:
-    - Principal: index.md
+    - Home: index.md
     - Práctica 1 servidores y clientes:
         - 'Introducción': 'p1-servidores-clientes/intro.md'
         - Responsabilidad individual:
