--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,6 +48,7 @@ nav:
         - 'Ejercicio 3 PostgreSQL': 'p4-grupal-plsql/ejercicio3-postgres.md'
         - 'Ejercicio 4': 'p4-grupal-plsql/ejercicio4.md'
         - 'Ejercicio 5': 'p4-grupal-plsql/ejercicio5.md'
+        - 'Ejercicio 5 PostgreSQL': 'p4-grupal-plsql/ejercicio5-postgres.md'
         - 'Ejercicio 6': 'p4-grupal-plsql/ejercicio6.md'
         - 'Ejercicio 7': 'p4-grupal-plsql/ejercicio7.md'
         - 'Ejercicio 8': 'p4-grupal-plsql/ejercicio8.md'
