caso práctico 1 dividido

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -60,7 +60,13 @@ nav:
             - 'Alumno 3: Arantxa': 'p5-usuarios/ri/alumno3.md'
             - 'Alumno 4: Antonio': 'p5-usuarios/ri/alumno4.md'
         - Responsabilidad grupal:
-            - 'Caso práctico 1': 'p5-usuarios/rg/caso-practico-1.md'
+            - Caso práctico 1:
+                - 'Ejercicio 1': 'p5-usuarios/rg/caso-practico-1-ej1.md'
+                - 'Ejercicio 2': 'p5-usuarios/rg/caso-practico-1-ej2.md'
+                - 'Ejercicio 3': 'p5-usuarios/rg/caso-practico-1-ej3.md'
+                - 'Ejercicio 4 Oracle': 'p5-usuarios/rg/caso-practico-1-ej4-oracle.md'
+                - 'Ejercicio 4 PostgreSQL': 'p5-usuarios/rg/caso-practico-1-ej4-postgres.md'
+                - 'Ejercicio 5': 'p5-usuarios/rg/caso-practico-1-ej5.md'
             - 'Caso práctico 2': 'p5-usuarios/rg/caso-practico-2.md'
             - 'Ejercicio grupal 3': 'p5-usuarios/rg/ejercicio-grupal-3.md'
 markdown_extensions:
